<resources>
    <string name="app_name">EvyAlerts</string>
    <string name="action_settings">Settings</string>
    <string name="action_filters">Filters</string>
    <string name="action_post">Post</string>
    <string name="facebook_app_id" translatable="false">892710704194179</string>
    <string name="fb_login_protocol_scheme" translatable="false">1166630520024561</string>
    <string name="banner_ad_unit_id_event_list" translatable="false">ca-app-pub-6174292774814788/7068002756</string>
    <string name="banner_ad_unit_id_intro" translatable="false">ca-app-pub-6174292774814788/5577923159</string>
    <string name="login_ok">Login OK</string>
    <string name="login_cancel">Login CANCEL</string>
    <string name="need_login">Need login</string>
    <string name="need_login_description">Need login</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="later">Later</string>
    <string name="delete_confirm">Do you want to delete?</string>
    <string name="open_drawer_menu" translatable="false">open drawer menu</string>
    <string name="close_drawer_menu" translatable="false">close drawer menu</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="progressing">progressing…</string>
    <string name="filter_events">Filter events \n(%1$s)</string>
    <string name="display_events">Display events</string>
    <string name="image_from_camera">Camera</string>
    <string name="image_from_gallery">Gallery</string>
    <string name="event_title">Title</string>
    <string name="default_event_title">Something happen here, be careful.</string>
    <string name="must_select_at_last_1_type">Must select at last 1 type.</string>
    <string name="wait_gps">Please, wait for GPS signal.</string>
    <string name="comment">Comment</string>
    <string name="comment_with_number">Comment (%1$d)</string>
    <string name="too_far">%1$s is too far from current location.</string>

    <string name="around_me_20">Around me in 20 Km</string>
    <string name="around_me_50">Around me in 50 Km</string>
    <string name="last_2_day">Last 2 days</string>

    <!--<string-array name="scope">-->
    <!--<item>@string/around_me_20</item>-->
    <!--<item>@string/around_me_50</item>-->
    <!--<item>@string/last_2_day</item>-->
    <!--</string-array>-->

    <!--<string-array name="scope">-->
    <!--<item>Around me in 20 Km</item>-->
    <!--<item>Around me in 50 Km</item>-->
    <!--<item>Last 2 days</item>-->
    <!--<item>Northern, last 2 days</item>-->
    <!--<item>Northeastern, last 2 days</item>-->
    <!--<item>Central, last 2 days</item>-->
    <!--<item>Eastern, last 2 days</item>-->
    <!--<item>Southern, last 2 days</item>-->
    <!--</string-array>-->

    <string-array name="scope_new">
        <item>Around me in 20 Km</item>
        <item>Around me in 50 Km</item>
        <item>Last 2 days</item>
        <item>Amnat Charoen</item>
        <item>Ang Thong</item>
        <item>Bangkok</item>
        <item>Bueng Kan</item>
        <item>Buri Ram</item>
        <item>Chachoengsao</item>
        <item>Chainat</item>
        <item>Chaiyaphum</item>
        <item>Chanthaburi</item>
        <item>Chiang Mai</item>
        <item>Chiang Rai</item>
        <item>Chon Buri</item>
        <item>Chumphon</item>
        <item>Kalasin</item>
        <item>Kamphaeng Phet</item>
        <item>Kanchanaburi</item>
        <item>Khon Kaen</item>
        <item>Krabi</item>
        <item>Lampang</item>
        <item>Lamphun</item>
        <item>Loei</item>
        <item>Lop Buri</item>
        <item>Mae Hong Son</item>
        <item>Maha Sarakham</item>
        <item>Mukdahan</item>
        <item>Nakhon Nayok</item>
        <item>Nakhon Pathom</item>
        <item>Nakhon Phanom</item>
        <item>Nakhon Ratchasima</item>
        <item>Nakhon Sawan</item>
        <item>Nakhon Si Thammarat</item>
        <item>Nan</item>
        <item>Narathiwat</item>
        <item>Nong Bua Lamphu</item>
        <item>Nong Khai</item>
        <item>Nonthaburi</item>
        <item>Pathum Thani</item>
        <item>Pattani</item>
        <item>Phang Nga</item>
        <item>Phatthalung</item>
        <item>Phayao</item>
        <item>Phetchabun</item>
        <item>Phetchaburi</item>
        <item>Phichit</item>
        <item>Phitsanulok</item>
        <item>Phra Nakhon Si Ayutthaya</item>
        <item>Phrae</item>
        <item>Phuket</item>
        <item>Prachin Buri</item>
        <item>Prachuap Khiri Khan</item>
        <item>Ranong</item>
        <item>Ratchaburi</item>
        <item>Rayong</item>
        <item>Roi Et</item>
        <item>Sa Kaeo</item>
        <item>Sakon Nakhon</item>
        <item>Samut Prakan</item>
        <item>Samut Sakhon</item>
        <item>Samut Songkhram</item>
        <item>Saraburi</item>
        <item>Satun</item>
        <item>Si Sa Ket</item>
        <item>Sing Buri</item>
        <item>Songkhla</item>
        <item>Sukhothai</item>
        <item>Suphan Buri</item>
        <item>Surat Thani</item>
        <item>Surin</item>
        <item>Tak</item>
        <item>Trang</item>
        <item>Trat</item>
        <item>Ubon Ratchathani</item>
        <item>Udon Thani</item>
        <item>Uthai Thani</item>
        <item>Uttaradit</item>
        <item>Yala</item>
        <item>Yasothon</item>
    </string-array>

    <string-array name="province">
        <item>Amnat Charoen</item>
        <item>Ang Thong</item>
        <item>Bangkok</item>
        <item>Bueng Kan</item>
        <item>Buri Ram</item>
        <item>Chachoengsao</item>
        <item>Chainat</item>
        <item>Chaiyaphum</item>
        <item>Chanthaburi</item>
        <item>Chiang Mai</item>
        <item>Chiang Rai</item>
        <item>Chon Buri</item>
        <item>Chumphon</item>
        <item>Kalasin</item>
        <item>Kamphaeng Phet</item>
        <item>Kanchanaburi</item>
        <item>Khon Kaen</item>
        <item>Krabi</item>
        <item>Lampang</item>
        <item>Lamphun</item>
        <item>Loei</item>
        <item>Lop Buri</item>
        <item>Mae Hong Son</item>
        <item>Maha Sarakham</item>
        <item>Mukdahan</item>
        <item>Nakhon Nayok</item>
        <item>Nakhon Pathom</item>
        <item>Nakhon Phanom</item>
        <item>Nakhon Ratchasima</item>
        <item>Nakhon Sawan</item>
        <item>Nakhon Si Thammarat</item>
        <item>Nan</item>
        <item>Narathiwat</item>
        <item>Nong Bua Lamphu</item>
        <item>Nong Khai</item>
        <item>Nonthaburi</item>
        <item>Pathum Thani</item>
        <item>Pattani</item>
        <item>Phang Nga</item>
        <item>Phatthalung</item>
        <item>Phayao</item>
        <item>Phetchabun</item>
        <item>Phetchaburi</item>
        <item>Phichit</item>
        <item>Phitsanulok</item>
        <item>Phra Nakhon Si Ayutthaya</item>
        <item>Phrae</item>
        <item>Phuket</item>
        <item>Prachin Buri</item>
        <item>Prachuap Khiri Khan</item>
        <item>Ranong</item>
        <item>Ratchaburi</item>
        <item>Rayong</item>
        <item>Roi Et</item>
        <item>Sa Kaeo</item>
        <item>Sakon Nakhon</item>
        <item>Samut Prakan</item>
        <item>Samut Sakhon</item>
        <item>Samut Songkhram</item>
        <item>Saraburi</item>
        <item>Satun</item>
        <item>Si Sa Ket</item>
        <item>Sing Buri</item>
        <item>Songkhla</item>
        <item>Sukhothai</item>
        <item>Suphan Buri</item>
        <item>Surat Thani</item>
        <item>Surin</item>
        <item>Tak</item>
        <item>Trang</item>
        <item>Trat</item>
        <item>Ubon Ratchathani</item>
        <item>Udon Thani</item>
        <item>Uthai Thani</item>
        <item>Uttaradit</item>
        <item>Yala</item>
        <item>Yasothon</item>
    </string-array>

    <string-array name="scope_northern" translatable="false">
        <item>Chiang Mai</item>
        <item>Chiang Rai</item>
        <item>Kamphaeng Phet</item>
        <item>Lampang</item>
        <item>Lamphun</item>
        <item>Mae Hong Son</item>
        <item>Nakhon Sawan</item>
        <item>Nan</item>
        <item>Phayao</item>
        <item>Phetchabun</item>
        <item>Phichit</item>
        <item>Phitsanulok</item>
        <item>Phrae</item>
        <item>Sukhothai</item>
        <item>Tak</item>
        <item>Uthai Thani</item>
        <item>Uttaradit</item>
    </string-array>

    <string-array name="scope_northeastern" translatable="false">
        <item>Amnat Charoen</item>
        <item>Bueng Kan</item>
        <item>Buri Ram</item>
        <item>Chaiyaphum</item>
        <item>Kalasin</item>
        <item>Khon Kaen</item>
        <item>Loei</item>
        <item>Maha Sarakham</item>
        <item>Mukdahan</item>
        <item>Nakhon Phanom</item>
        <item>Nakhon Ratchasima</item>
        <item>Nong Bua Lamphu</item>
        <item>Nong Khai</item>
        <item>Roi Et</item>
        <item>Sakon Nakhon</item>
        <item>Si Sa Ket</item>
        <item>Surin</item>
        <item>Ubon Ratchathani</item>
        <item>Udon Thani</item>
        <item>Yasothon</item>
    </string-array>

    <string-array name="scope_central" translatable="false">
        <item>Ang Thong</item>
        <item>Bangkok</item>
        <item>Chainat</item>
        <item>Kanchanaburi</item>
        <item>Lop Buri</item>
        <item>Nakhon Nayok</item>
        <item>Nakhon Pathom</item>
        <item>Nonthaburi</item>
        <item>Pathum Thani</item>
        <item>Phetchaburi</item>
        <item>Phra Nakhon Si Ayutthaya</item>
        <item>Prachuap Khiri Khan</item>
        <item>Ratchaburi</item>
        <item>Samut Prakan</item>
        <item>Samut Sakhon</item>
        <item>Samut Songkhram</item>
        <item>Saraburi</item>
        <item>Sing Buri</item>
        <item>Suphan Buri</item>
    </string-array>

    <string-array name="scope_eastern" translatable="false">
        <item>Chachoengsao</item>
        <item>Chanthaburi</item>
        <item>Chon Buri</item>
        <item>Prachin Buri</item>
        <item>Rayong</item>
        <item>Sa Kaeo</item>
        <item>Trat</item>
    </string-array>

    <string-array name="scope_southern" translatable="false">
        <item>Chumphon</item>
        <item>Krabi</item>
        <item>Nakhon Si Thammarat</item>
        <item>Narathiwat</item>
        <item>Pattani</item>
        <item>Phang Nga</item>
        <item>Phatthalung</item>
        <item>Phuket</item>
        <item>Ranong</item>
        <item>Satun</item>
        <item>Songkhla</item>
        <item>Surat Thani</item>
        <item>Trang</item>
        <item>Yala</item>
    </string-array>

    <string name="event_accident">Accident</string>
    <string name="event_natural_disaster">Natural Disaster</string>
    <string name="event_other">Other</string>
    <string name="event_traffic_jam">Traffic Jam</string>

    <string-array name="event_type">
        <item>@string/event_accident</item>
        <item>@string/event_natural_disaster</item>
        <item>@string/event_other</item>
        <item>@string/event_traffic_jam</item>
    </string-array>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_main" translatable="false">EvyAlerts</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_post_event">Post Event</string>
    <string name="title_activity_event_comment">Comment</string>
</resources>
