<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragment.PostEventActivityFragment"
    tools:showIn="@layout/activity_post_event">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/toggleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleAccident"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:textOff="@string/event_accident"
                android:textOn="@string/event_accident"
                android:textColor="@color/toggle_text_color"
                android:drawableTop="@drawable/toggle_ic_accident" />

            <ToggleButton
                android:id="@+id/toggleNaturalDisaster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:textOff="@string/event_natural_disaster"
                android:textOn="@string/event_natural_disaster"
                android:textColor="@color/toggle_text_color"
                android:drawableTop="@drawable/toggle_ic_natural_disaster" />

            <ToggleButton
                android:id="@+id/toggleOther"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:textOff="@string/event_other"
                android:textOn="@string/event_other"
                android:textColor="@color/toggle_text_color"
                android:drawableTop="@drawable/toggle_ic_other" />

            <ToggleButton
                android:id="@+id/toggleTrafficJam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:textOff="@string/event_traffic_jam"
                android:textOn="@string/event_traffic_jam"
                android:textColor="@color/toggle_text_color"
                android:drawableTop="@drawable/toggle_ic_traffic_jam" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivIcEventTitle"
            android:layout_width="@dimen/icon_size_post"
            android:layout_height="@dimen/icon_size_post"
            android:layout_below="@id/toggleGroup"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_label_grey_500_36dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ivIcEventTitle"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/ivIcEventTitle"
            android:theme="@style/GreyTextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtEventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_title" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/ivIcEventProvince"
            android:layout_width="@dimen/icon_size_post"
            android:layout_height="@dimen/icon_size_post"
            android:layout_below="@id/tilEventTitle"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_my_location_grey_500_36dp" />

        <Spinner
            android:id="@+id/spnProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ivIcEventProvince"
            android:layout_marginBottom="32dp"
            android:layout_toEndOf="@id/ivIcEventProvince" />


        <ImageView
            android:id="@+id/ivIcEventPhoto"
            android:layout_width="@dimen/icon_size_post"
            android:layout_height="@dimen/icon_size_post"
            android:layout_below="@id/spnProvince"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_photo_camera_grey_500_36dp" />

        <ImageView
            android:id="@+id/ivEventImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignTop="@id/ivIcEventPhoto"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/ivIcEventPhoto"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/image_placeholder_grey_500" />
    </RelativeLayout>

</ScrollView>
